--- a/Menu.html
+++ b/Menu.html
@@ -1,8 +1,10 @@
 Pizzaria: Pizza Alegre
-Versão: 002
+Versão: 003
 Operador:
 
 Telefone:
 Cliente:
 CPF:
 E-mail:
+
+aceitar participar de promoções: ( ) sim ( ) não.
